--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@ls-lint/ls-lint": "2.1.0",
     "@spiriit/vite-plugin-svg-spritemap": "2.2.3",
     "@vitest/ui": "^0.34.6",
-    "vitest": "^0.34.6",
     "autoprefixer": "10.4.16",
     "backstopjs": "6.2.2",
     "cli-progress": "3.12.0",
@@ -42,9 +41,10 @@
     "vite": "5.0.11",
     "vite-plugin-image-optimizer": "1.1.7",
     "vite-plugin-minify": "^1.5.2",
+    "vitest": "^0.34.6",
     "w3c-html-validator": "1.6.1"
   },
   "dependencies": {
-    "swiper": "11.0.5"
+    "swiper": "^11.0.5"
   }
 }
