--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vite": "5.0.11",
     "vite-plugin-image-optimizer": "1.1.7",
     "vite-plugin-minify": "^1.5.2",
+    "vite-plugin-svg-spriter": "1.0.0",
     "vitest": "^0.34.6",
     "w3c-html-validator": "1.6.1"
   },
