--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - master
+      -main
   pull_request:
     branches: '*'
 
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '>=16.x'
+          node-version: '16.x'
 
       - uses: actions/checkout@master
         name: Checkout
